--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springdoc</groupId>-->
+<!--            <artifactId>springdoc-openapi-ui</artifactId>-->
+<!--            <version>1.4.6</version>-->
+<!--        </dependency>-->
+
+
     </dependencies>
 
     <build>
