--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/youcoderecruitment
 spring.jpa.hibernate.ddl-auto=update
+server.port=8080
