--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,11 @@ spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/youcoderecruitment
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
+# Enable multipart file uploads
+spring.servlet.multipart.enabled=true
+
+# Set maximum file size for uploaded files (in bytes)
+spring.servlet.multipart.max-file-size=10MB
+
+# Set maximum size for the entire request (in bytes)
+spring.servlet.multipart.max-request-size=15MB
